; ModuleID = '/home/carl/AnghaBench/libevent/test/extr_test-ratelim.c_group_drain_cb.c'
source_filename = "/home/carl/AnghaBench/libevent/test/extr_test-ratelim.c_group_drain_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ratelim_group = common dso_local global i32 0, align 4
@cfg_group_drain = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i16, i8*)* @group_drain_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @group_drain_cb(i32 %0, i16 signext %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i16, align 2
  %6 = alloca i8*, align 8
  store i32 %0, i32* %4, align 4
  store i16 %1, i16* %5, align 2
  store i8* %2, i8** %6, align 8
  %7 = load i32, i32* @ratelim_group, align 4
  %8 = load i32, i32* @cfg_group_drain, align 4
  %9 = call i32 @bufferevent_rate_limit_group_decrement_read(i32 %7, i32 %8)
  %10 = load i32, i32* @ratelim_group, align 4
  %11 = load i32, i32* @cfg_group_drain, align 4
  %12 = call i32 @bufferevent_rate_limit_group_decrement_write(i32 %10, i32 %11)
  ret void
}

declare dso_local i32 @bufferevent_rate_limit_group_decrement_read(i32, i32) #1

declare dso_local i32 @bufferevent_rate_limit_group_decrement_write(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
